hphp/test/zend/good/zend/errmsg_002.php.exp
HipHop Fatal error: Cannot declare abstract method test::foo() private in hphp/test/zend/good/zend/errmsg_002.php on line 4
